fix(composer): update overlay visibility toggles behavior

--- a/packages/scene-composer/src/components/three-fiber/DataOverlayComponent/styles.scss
+++ b/packages/scene-composer/src/components/three-fiber/DataOverlayComponent/styles.scss
@@ -21,6 +21,7 @@
 }
 .panel-container {
   width: 210px;
+  min-height: 2em;
 }
 .annotation-container {
   padding-left: 12px;
